problemas no botao apagar > element is not defined todojs 29 taskjs 33

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Todo List</h1>
         <input id="newTask" type="text">
-        <button onclick=createTask()>Incluir</button>
+        <button onclick=newTask()>Incluir</button>
 
         <div id="list">
 
@@ -20,7 +20,10 @@
         </div>
 
     </div>
+
 </body>
+
 <script src="./src/js/task.js"></script>
 <script src="./src/js/todo.js"></script>
+
 </html>
